--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.3.1",
     "lucide-react": "^0.563.0",
+    "mapbox-gl": "^3.18.1",
     "next": "16.1.6",
     "next-sanity": "^11.6.12",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-map-gl": "^8.1.0",
     "sanity": "^4.22.0",
     "skills": "github:clerk/skills",
     "sonner": "^2.0.7",
